# CppMandlebrotAnimated

./: .gitattributes  CMakeLists.txt  Readme.md  m  r
include/: app.h  config.hpp  shader.hpp
shaders/: mandelbrot.frag
src/: app.cpp  config.cpp  main.cpp  shader.cpp
